--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ai-dev-guardian"
-version = "0.1.1"
+version = "0.2.1"
 description = "Local-first scanner for repository quality and security risks"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -16,7 +16,8 @@ dependencies = []
 dev = ["pytest"]
 
 [tool.setuptools]
-packages = ["guardian", "guardian.scan"]
+packages = ["guardian", "guardian.scan", "guardian.ai"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+
